<resources>
    <string name="app_name">LDS Ordinances</string>
    <string name="AnointingOil">Anointing with Oil</string>
    <string name="SealingAnointing">Sealing the Anointing</string>
    <string name="ConsecratingOil">Consecrating Oil</string>
    <string name="ConferringPriesthood">Conferring the Priesthood and Offices</string>
    <string name="SettingApart">Setting Apart Officers and Teachers</string>
	<string name="FatherBlessing">Father’s/Comforting Blessing</string>
	<string name="NamingChildren">Naming and Blessing Children</string>
	<string name="Baptism">Baptism</string>
	<string name="Confirmation">Confirmation</string>
	<string name="Sacrament">Sacrament</string>
	<string name="DedicatingHomes">Dedicating Homes</string>
	<string name="DedicatingGraves">Dedicating Graves</string>
	<string name="select_items">Select Ordinance</string>
	<string name="cant_move_up">Can\'t move top ordinance up</string>
	<string name="moved_up">Ordinance moved up</string>
	<string name="moved_up_plural">Ordinances moved up</string>
	<string name="cant_move_down">Can\'t move bottom ordinance down</string>
	<string name="moved_down">Ordinance moved down</string>
	<string name="moved_down_plural">Ordinances moved down</string>
	<string name="one_selected">1 Ordinance selected</string>
	<string name="items_selected">Ordinances selected</string>
    <string name="anointing_oil">        
        <![CDATA[
        
        	<p><b>Anointing with Oil</b></p>
        
	        <p>The anointing is done by one Melchizedek Priesthood holder. He:</p>
			
			<b>1.</b> Puts a drop of consecrated oil on the person’s head.<br />
			<b>2.</b> Places his hands lightly on the person’s head and calls the person by his or her full name.<br />
			<b>3.</b> States that he is anointing the person by the authority of the Melchizedek Priesthood.<br />
			<b>4.</b> States that he is anointing with oil that has been consecrated for anointing and blessing the sick and afflicted.<br />
			<b>5.</b> Closes in the name of Jesus Christ.
			
        
        	<p><b>Administering to the Sick</b></p>
			
			<p>Only men who hold the Melchizedek Priesthood may administer to the sick or afflicted. 
			Normally, two or more administer together, but one may do it alone. If consecrated oil 
			is not available, a man who holds the Melchizedek Priesthood may give a blessing by the 
			authority of the priesthood.</p>
			
			<p>A father who holds the Melchizedek Priesthood normally should administer to sick members of 
			his family.</p>
        	
        	<p>Brethren should administer to the sick at the request of the sick person or of those
        	who are vitally concerned so the blessing will be according to their faith (see 
        	<a href="http://www.lds.org/scriptures/dc-testament/dc/24.13-14?lang=eng#13">D&amp;C 24:13-14</a>,
        	<a href="http://www.lds.org/scriptures/dc-testament/dc/42.43-44?lang=eng#43">42:43-44</a>,
        	<a href="http://www.lds.org/scriptures/dc-testament/dc/42.48-52?lang=eng#48"> 48-52</a>).
        	Melchizedek Priesthood holders who visit hospitals should not solicit opportunities to administer to the sick.</p>
        	
        	<p>If a person requests more than one blessing for the same illness, the priesthood holder need 
        	not anoint with oil after the first blessing. Instead, he gives a blessing by the laying on of 
        	hands and the authority of the Melchizedek Priesthood.</p>

			<p>Administering to the sick has two parts: anointing with oil and sealing the anointing.</p>
        	
		]]>
    </string>
    <string name="sealing_anointing">        
        <![CDATA[
        
        	<p><b>Sealing the Anointing</b></p>
        
	        <p>The one who seals the anointing:</p>
			
			<b>1.</b> Calls the person by his or her full name.<br />
			<b>2.</b> States that he is sealing the anointing by the authority of the Melchizedek Priesthood.<br />
			<b>3.</b> Gives a blessing as the Spirit directs.<br />
			<b>4.</b> Closes in the name of Jesus Christ.
			
			<p>Normally, two or more men who hold the Melchizedek Priesthood place their hands lightly on the 
			head of the person who is sick.<p>
        
        	<p><b>Administering to the Sick</b></p>
			
			<p>Only men who hold the Melchizedek Priesthood may administer to the sick or afflicted. 
			Normally, two or more administer together, but one may do it alone. If consecrated oil 
			is not available, a man who holds the Melchizedek Priesthood may give a blessing by the 
			authority of the priesthood.</p>
			
			<p>A father who holds the Melchizedek Priesthood normally should administer to sick members of 
			his family.</p>
        	
        	<p>Brethren should administer to the sick at the request of the sick person or of those
        	who are vitally concerned so the blessing will be according to their faith (see 
        	<a href="http://www.lds.org/scriptures/dc-testament/dc/24.13-14?lang=eng#13">D&amp;C 24:13-14</a>,
        	<a href="http://www.lds.org/scriptures/dc-testament/dc/42.43-44?lang=eng#43">42:43-44</a>,
        	<a href="http://www.lds.org/scriptures/dc-testament/dc/42.48-52?lang=eng#48"> 48-52</a>).
        	Melchizedek Priesthood holders who visit hospitals should not solicit opportunities to administer to the sick.</p>
        	
        	<p>If a person requests more than one blessing for the same illness, the priesthood holder need 
        	not anoint with oil after the first blessing. Instead, he gives a blessing by the laying on of 
        	hands and the authority of the Melchizedek Priesthood.</p>

			<p>Administering to the sick has two parts: anointing with oil and sealing the anointing.</p>
		]]>
    </string>
    <string name="consecrating_anointing">        
        <![CDATA[
        	
        	<p><b>Consecrating Oil</b></p>
        
	        <p>To consecrate oil, a priesthood holder:</p>
			
			<b>1.</b> Holds an open container of olive oil.<br />
			<b>2.</b> Addresses our Heavenly Father.<br />
			<b>3.</b> States that he is acting by the authority of the Melchizedek Priesthood.<br />
			<b>4.</b> Consecrates the oil (not the container) and sets it apart for anointing and 
			blessing of the sick and afflicted.<br />
			<b>5.</b> Closes in the name of Jesus Christ.
        
        	<p>One or more Melchizedek Priesthood holders must consecrate olive oil before it is 
        	used to anoint the sick or afflicted. No other oil may be used.</p>
        	
        	<p>Members should not take consecrated oil internally or apply it on afflicted parts of the body.</p>
        
		]]>
    </string>
    <string name="conferring_priesthood">        
        <![CDATA[
        
        	<p><b>Conferring the Priesthood and Ordaining to an Office</b></p>
        
	        <p>The priesthood holder who performs the ordination:</p>
			
			<b>1.</b> Calls the person by his full name.<br />
			<b>2.</b> States the authority by which the ordination is performed (Aaronic or Melchizedek Priesthood).<br />
			<b>3.</b> Confers the Aaronic or Melchizedek Priesthood, unless it has already been conferred.<br />
			<b>4.</b> Ordains the person to an office in the Aaronic or Melchizedek Priesthood and bestows 
			the rights, powers, and authority of that office. (Priesthood keys are not bestowed in conferring 
			the priesthood or ordaining to one of these offices.)<br />
			<b>5.</b> Gives words of blessing as the Spirit directs.<br />
			<b>6.</b> Closes in the name of Jesus Christ.
			
			<p>To perform a priesthood ordination, one or more authorized priesthood holders place their hands 
			lightly on the person’s head.</p>
			
			<p>When the necessary interviews and approvals are completed:</p>

			<p>1. The stake president (or someone under his direction) may ordain the person to the 
			office of elder, or he may authorize another Melchizedek Priesthood holder to do so. 
			Only Melchizedek Priesthood holders may stand in the circle.</p>
			
			<p>2. The stake president (or someone under his direction) may ordain the person to the 
			office of high priest, or he may authorize another high priest to do so. Only high priests 
			may stand in the circle.</p>
			
			<p>3. The bishop (or someone under his direction) may ordain the person to the office of 
			deacon, teacher, or priest. Only priests and Melchizedek Priesthood holders may act as 
			voice or stand in the circle.</p>
			
			<p>To participate in an ordination, a person must (1) be a priest or Melchizedek Priesthood 
			holder and (2) have equal or higher priesthood authority than is to be given in the ordinance. 
			For instance, an elder should not stand in the circle when a high priest is ordained or when 
			a man is set apart to an office that requires him to be a high priest.</p>
        
		]]>
    </string>
    <string name="setting_appart">        
        <![CDATA[
        
        	<p><b>Setting Apart Officers and Teachers</b></p>
        
	        <p>The priesthood holder who acts as voice:</p>
			
			<b>1.</b> Calls the person by his or her full name.<br />
			<b>2.</b> States that he is acting by the authority of the Melchizedek Priesthood.<br />
			<b>3.</b> Sets the person apart to the appropriate office in the stake, ward, quorum, high 
			priests group, or class.<br />
			<b>4.</b> Confers keys if the person is entitled to receive them. (In stakes and wards, only 
			stake presidents, bishops, and quorum presidents receive keys of presidency when they are set 
			apart. The word keys should not be used when setting apart counselors, high councilors, high 
			priests group leaders, presidents of auxiliary organizations, the bishop’s priests quorum 
			assistants, or teachers in an organization.)<br />
			<b>5.</b> Gives words of blessing as the Spirit directs.<br />
			<b>6.</b> Closes in the name of Jesus Christ.
			
			<p>Under the direction of the presiding authority, one or more Melchizedek Priesthood holders 
			may participate in a setting apart, including a worthy father or husband. These brethren 
			place their hands lightly on the person’s head.</p>
			
			<p>Members who are called to most Church positions should be set apart before they begin 
			serving. The Chart of Callings indicates who is authorized to perform a setting apart. Presidents 
			are set apart before their counselors.</p>
			
			<p>A setting apart is an opportunity to give a blessing. Detailed counsel and instruction are 
			normally provided when a person is taught his or her duties rather than during the setting apart.</p>
			
			<p>A setting apart should not be expanded into a formal meeting. It is not necessary to have 
			prayers, testimonies, or instruction when someone is set apart.</p>
        
		]]>
    </string>
    <string name="alternate_text_on_about_lds">picture of application icon</string>
    <string name="version">Version</string>
    <string name="copy_right">2012 Klapheck Apps</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="open_source_initiative">Source</string>
    <string name="open_source_title">References</string>
    <string name="open_source_logo_discription">Open Source Initiative logo</string>
    <string name="java_source">Java source code</string>
    <string name="about_us">About Us</string>
    <string name="share">Share</string>
    <string name="blessings">Blessings</string>
    <string name="open_source">Open-Source</string>
    <string name="exit">Exit</string>
    <string name="move_up">Move Up</string>
    <string name="move_down">Move Down</string>
    <string name="default_order">Default Order</string>
</resources>