<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/ivAppIcon"
        android:layout_width="wrap_content"
        android:layout_height="158dp"
        android:paddingTop="20dp"
        android:contentDescription="@string/alternate_text_on_about_lds"
        android:src="@drawable/herald_angel_hi_edit" />

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="20dp"
        android:text="@string/version"
        />

    <TextView
        android:id="@+id/vtCopyRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/copy_right"
        android:paddingTop="5dp"
        />

    <Button
        android:id="@+id/bSendFeedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/send_feedback"
        />

</LinearLayout>